--- a/flower-store/assets/scss/index.scss
+++ b/flower-store/assets/scss/index.scss
@@ -7,7 +7,7 @@ $tablet-width: 768px;
 $desktop-width: 1024px;
 
 @mixin tablet {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+  @media (min-width: #{$tablet-width}) {
     @content;
   }
 }
@@ -32,9 +32,6 @@ body {
             padding: 10px 0px 10px;
         }
 
-        @include desktop() {
-            padding: 10px 0px 10px;
-        }
     }
 
    
@@ -53,7 +50,7 @@ body {
 
     .nav-item {
         font-size: 11.34 px;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat Alternates', sans-serif;
         color: #e7e4db;
         line-height: 2.048;
         text-transform: uppercase;
@@ -69,7 +66,7 @@ body {
         }
     }
 
-    #sign_in {
+    .sign_in {
         border: 2px solid;
         border-radius: 25px;
         padding: 5px 5px;
@@ -120,9 +117,10 @@ body {
             .banner_title {
                 font-family: 'Playfair Display', serif;
                 overflow: hidden;
-                font-size: 25px;
+                font-size: 43px;
                 font-weight: bold;
                 color :#484a4b;
+                text-align: center;
 
                 @include tablet() {
                     font-size: 50px;
@@ -159,10 +157,6 @@ body {
                     @include tablet() {
                         left: 0;
                     }
-
-                    @include desktop() {
-                        left: 0;
-                    }
                 }
 
                 &::after {
@@ -179,23 +173,18 @@ body {
                         right: 0;
                     }
 
-                    @include desktop() {
-                        right: 0;
-                    }
+
                 }
             }
             
             .para_text {
                 font-family: 'Josefin Slab', serif;
-                font-size: 14px;
+                font-size: 18px;
 
                 @include tablet() {
-                    font-size: 15px;
+                    font-size: 25px;
                 }
 
-                @include desktop() {
-                    font-size: 20px;
-                }
             }
         }
 
@@ -210,11 +199,11 @@ body {
                 border: none;
                 font-weight: 700;
                 text-transform: uppercase;
-                font-size: 8px;
+                font-size: 12px;
 
 
                 @include desktop() {
-                    font-size: 12.5px;
+                    font-size: 16px;
                 }
             }
             
@@ -223,17 +212,16 @@ body {
                 border: none;
                 background: none;
                 font-weight: 700;
-                font-size: 8px;
+                font-size: 12px;
                 text-transform: uppercase;
 
                 @include desktop() {
-                    font-size: 12.5px;
+                    font-size: 16px;
                 }
             }
         }     
         
         @include tablet() {
-            padding: 40px 45px 0px;
             margin-top: 0px;
         }
 
@@ -241,7 +229,7 @@ body {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 60%;
+            max-width: 426px;
         }
             
     }
@@ -274,14 +262,10 @@ body {
             font-weight: bold;
             line-height: 0.67;
             color: #ffffff;
-            font-size: 35px;
+            font-size: 36px;
 
             @include tablet() {
-                font-size: 40px;
-            }
-
-            @include desktop() {
-                font-size: 48.21 px;
+                font-size: 48px;
             }
         }
         
@@ -316,7 +300,7 @@ body {
             color: #484a4b;
 
             @include tablet() {
-                font-size: 50px;
+                font-size: 43px;
             }
 
             @include desktop() {
@@ -331,25 +315,16 @@ body {
             font-weight: 500;
             color:#917c5d;
             overflow: hidden;
-            font-size: 16px;
+            font-size: 18px;
 
             @include tablet() {
-                font-size: 20px;
-            }
-
-            @include desktop() {
                 font-size: 25px;
             }
-            
         }
     }
         
     .box_list_product {
         @include tablet() {
-            display: none;
-        }
-
-        @include desktop() {
             display: none;
         }
 
@@ -403,26 +378,26 @@ body {
                 color: #484a4b;
                 font-weight: bold;
                 line-height: 0.905;
-                font-size: 30px;
+                font-size: 22px;
                 overflow: hidden;
                 text-overflow: ellipsis;
 
                 @include tablet() {
-                    overflow: unset;
+                    font-size: 30;
                 }
 
-                @include desktop() {
-                    overflow: unset;
-                }
             }
             
             .detail_product_text {
                 font-family: 'Montserrat Alternates', sans-serif;
-                font-size: 12.5px;
+                font-size: 8px;
                 line-height: 1.333;
                 color: #6b502c;
                 overflow: hidden;
-                text-overflow: ellipsis;
+
+                @include tablet() {
+                    font-size: 12px;
+                }
             }
             
             .read_product {
@@ -482,10 +457,6 @@ body {
         @include tablet() {
             display: inline-block;
         }
-
-        @include desktop() {
-            display: inline-block;
-        }
     }
 
     //End Product
@@ -533,10 +504,10 @@ body {
                 font-weight: bold;
                 line-height: 0.905;
                 color: #484a4b;
-                font-size: 20px;
+                font-size: 36px;
     
                 @include tablet() {
-                    font-size: 24px;
+                    font-size: 43px;
                 }
     
                 @include desktop() {
@@ -551,7 +522,7 @@ body {
                 margin-top: 24px;
     
                 @include tablet() {
-                    font-size: 20x;
+                    font-size: 18x;
                 }
     
                 @include desktop() {
@@ -623,106 +594,84 @@ body {
             }
         }
 
-            .box_offer_detail {
-                padding: 30px 45px 30px;
-                position: relative;
+        .box_offer_detail {
+            padding: 4.375rem 0 3.125rem;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: space-between;
+        }
 
-                .box_offer_text {
+        .offer_title_text {
+            font-family: 'Playfair Display', serif;
+            font-weight: bold;
+            text-transform: uppercase;
+            line-height: 0.905;
+            background-color: #424242;
+            color: #e7e4db;
+            border-radius: 25px;
+            padding: 10px 40px 12px;
+            font-size: 19px;
+            border: none;
 
-                    .offer_title {
-                        font-family: 'Playfair Display', serif;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                        line-height: 0.905;
-                        background-color: #424242;
-                        color: #e7e4db;
-                        border-radius: 25px;
-                        padding: 5px 15px;
-                        font-size: 20px;
-                        border: none;
+            @include desktop() {
+                font-size: 26.69px;
+            }
+        }
 
-                        @include tablet() {
-                            font-size: 23px;
-                        }
+        .box_offer_text {
+            display: flex;
+            justify-content: space-evenly;
 
-                        @include desktop() {
-                            font-size: 26.69px;
-                        }
-                    }
-                    
-                    .cost_offer {
-                        line-height: 0.905;
-                        font-family: 'Montserrat Alternates', sans-serif;
-                        font-weight: 800;
-                        font-size: 40px;
-                        color:#424242;
-                        margin-top: 10px;
+            .box_leaf {
 
-                        @include tablet() {
-                            font-size: 80px;
-                        }
-
-                        @include desktop() {
-                            font-size: 163.67px;
-                        }
-                    }
-                    
-                    .offer_text {
-                        color:#424242;
-                        font-family: 'Montserrat Alternates', sans-serif;
-                        font-weight: bold;
-                        line-height: 1;
-                        font-size: 16px;
-                        margin-bottom: 0px;
-
-                        @include desktop() {
-                            font-size: 29px;
-                        }
-                    }
+                img {
+                    width: 100%;
                 }
-
-                .box_leaf {
-
-                    img {
-                        position: absolute;
-                        top: 50%;
-                        transform: translateY(-50%);
-                        width: 10%;
-
-                        &:nth-child(1) {
-                            left: 15px;
-                        }
-
-                        &:nth-child(2) {
-                            right: 15px;
-                        }
-                    }
-                    
-                }
+            }
+            
+            .cost_offer {
+                line-height: 0.905;
+                font-family: 'Montserrat Alternates', sans-serif;
+                font-weight: 800;
+                font-size: 80px;
+                color:#424242;
+                margin-top: 10px;
 
                 @include tablet() {
-                    padding: 40px 45px 0px;
-                    margin-top: 0px;
+                    font-size: 80px;
                 }
 
                 @include desktop() {
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
-
-            }
-
-            .offer_photo {
-
-                .offer_pic {
-                    width: 100%;
-                    object-fit: cover;
-                    height: auto;
+                    font-size: 132px;
                 }
             }
+        }
 
-            
+        .offer_text {
+            color:#424242;
+            font-family: 'Montserrat Alternates', sans-serif;
+            font-weight: bold;
+            line-height: 1;
+            font-size: 16px;
+            margin-bottom: 0px;
+
+            @include desktop() {
+                font-size: 26px;
+            }
+        }
+
+        .offer_photo {
+            width: 100%;
+            height: 100%;
+
+            .offer_pic {
+                width: 100%;
+                object-fit: cover;
+                height: 100%;
+            }
+        }
     }
     // End about us
 
@@ -757,10 +706,6 @@ body {
                     display: flex;
                 }
 
-                @include desktop() {
-                    display: flex;
-                }
-
                 .feature_img {
 
                     &::before {
@@ -768,8 +713,8 @@ body {
                         position: absolute;
                         bottom: -20px;
                         left:-15px;
-                        width: 145px;
-                        height: 100px;
+                        width: 10.25rem;
+                        height: 7.5rem;
                         border: 2px solid #8a6a3e;
                         z-index: -1;
                     }
@@ -779,8 +724,8 @@ body {
                         position: absolute;
                         top: 10px;
                         right: -10px;
-                        width: 100px;
-                        height: 100px;
+                        width: 10.25rem;
+                        height: 7.5rem;
                         background-color: #c87e6b;
                         z-index: -1;
                     }
@@ -812,12 +757,6 @@ body {
                         flex-direction: row-reverse;
                     }
     
-                    @include desktop() {
-                        display: flex;
-                        flex-direction: row-reverse;
-                    }
-
-
                     .content_blog {
 
                         @include tablet() {
@@ -838,8 +777,8 @@ body {
                             position: absolute;
                             top: 10px;
                             left: -10px;
-                            width: 100px;
-                            height: 100px;
+                            width: 10.25rem;
+                            height: 7.5rem;
                             background-color: #c87e6b;
                             z-index: -1;
                         }
@@ -849,8 +788,8 @@ body {
                             position: absolute;
                             bottom: -20px;
                             right:-15px;
-                            width: 145px;
-                            height: 100px;
+                            width: 10.25rem;
+                            height: 7.5rem;
                             border: 2px solid #8a6a3e;
                             z-index: -1;
                         }
@@ -892,7 +831,7 @@ body {
 
         @include desktop() {
             margin-left: 93px;
-            margin-top: 80px;
+            margin-top: 70px;
         }
         
         .content_pic {
@@ -997,9 +936,14 @@ body {
 
         .form-control {
             margin-top: 20px;
+            font-family: 'Montserrat Alternates', sans-serif;
 
             @include tablet() {
                 margin-top: 40px;
+            }
+
+            &::placeholder {
+                font-family: 'Montserrat Alternates', sans-serif;
             }
 
         }
@@ -1023,6 +967,10 @@ body {
                 font-size: 18.25px;
             }
         }
+
+        textarea {
+            resize: none;
+        }
     }
     // End sub //
 
@@ -1030,7 +978,7 @@ body {
 
     // Footer // 
     .block_footer {
-        padding: 150px 0px 100px;
+        padding: 80px 0px;
         background-color: #424242;
     }
 
