--- a/floralpage/css/home.css
+++ b/floralpage/css/home.css
@@ -32,6 +32,9 @@ body {
 .item2 {
 	width: 24px;
 }
+.item3 {
+	width: 16px;
+}
 .login {
 	border: 2px #fff solid;
 	padding: 4px 20px;
@@ -110,7 +113,8 @@ body {
 	font-weight: 600;
 }
 .item7 {
-	color: #765a33;	
+	color: #765a33;
+	line-height: 1.3;	
 }
 .item8 , .item9 {
 	list-style: none;
@@ -414,7 +418,7 @@ body {
 	color: white !important;
 	margin-top: 0px !important;
 	clip-path: circle();
-    background-color: #8d8888;
+    background-color: #000 !important;
     padding: 20px 30px;
 }
 .swiper-button-next {
@@ -575,7 +579,7 @@ body {
 	    top: -10px;
 	}
 	.ctn2-item3 {
-	    top: 180px;
+	    bottom: -10px;
 	    left: -10px;
 	    width: 180px;
 	}
@@ -585,7 +589,7 @@ body {
     	width: 120px;
 	}
 	.ctn3-item3 {
-		top: 180px;
+		bottom: -10px;
 	    right: 5px;
 	    width: 180px;
 	}
@@ -596,10 +600,13 @@ body {
 	    z-index: -1;
 	}
 	.ctn4-item3 {
-		top: 180px;
+		bottom: -10px;
 	    left: 5px;
 	    width: 180px;
 	    z-index: -1;
+	}
+	.ctn2-item10 > img , .ctn2-item12{
+		width: 45px;
 	}
 	.container {
 		--bs-gutter-x: 0 !important;
@@ -645,9 +652,6 @@ body {
 	.ctn2-item11 {
 		justify-content: center;
 		display: flex;
-	}
-	.ctn2-item12 {
-		width: 70px !important;
 	}
 	.ctn5-item4 {
 		width: 100% !important;
@@ -758,6 +762,9 @@ body {
 		height: 100%;
 		object-fit: cover;
 	    width: 100%;
+	}
+	.ctn2-item10 > img , .ctn2-item12{
+		width: 80px;
 	}
 	.rigtctn2 {
 		justify-content: center;
@@ -874,6 +881,9 @@ body {
 		object-fit: cover;
 	    width: 100%;
 	}
+	.ctn2-item10 > img , .ctn2-item12{
+		width: 100px;
+	}
 	.containerItem4 {
 		top: -5%;
 		width: 350px;
@@ -958,6 +968,9 @@ body {
 		height: 700px;
 	}
 	/* container */
+	.ctn2-item10 > img , .ctn2-item12{
+		width: 120px;
+	}
 	.containerBottom {
 		padding-bottom: 150px;
 	}
