Responsive Lalasia Page

--- a/Lalisa-page/assets/css/index.css
+++ b/Lalisa-page/assets/css/index.css
@@ -2,6 +2,10 @@
   font-family: "Eudoxus Sans";
   src: url("/assets/fonts/EudoxusSans-Medium.ttf");
 }
+@font-face {
+  font-family: "Slick";
+  src: url("/assets/fonts/slick.ttf");
+}
 .block_header {
   padding: 30px 0px;
   border-bottom: 2px solid #F3F3F3;
@@ -22,6 +26,24 @@ li.nav-item .nav-link {
 
 .icon_option:nth-child(1) {
   margin-right: 28px;
+}
+
+body {
+  overflow-x: hidden;
+  margin: 0;
+}
+
+p {
+  margin-bottom: 0 !important;
+}
+
+a {
+  text-decoration-line: none;
+  color: #151411;
+}
+a:hover {
+  text-decoration-line: none;
+  color: #151411;
 }
 
 /*==================Start Banner=============*/
@@ -55,6 +77,8 @@ li.nav-item .nav-link {
   padding: 15px 46px;
   color: #FFFFFF;
   font-size: 18px;
+  font-weight: 700;
+  line-height: 130%;
 }
 
 .block_banner {
@@ -106,6 +130,8 @@ li.nav-item .nav-link {
 
 .box_banner_photo {
   margin-top: -40px;
+  max-width: 1240px;
+  max-height: 480px;
 }
 .box_banner_photo img {
   width: 100%;
@@ -142,6 +168,11 @@ li.nav-item .nav-link {
   margin-top: 180px;
 }
 
+.title_product {
+  margin-top: 14px;
+  margin-bottom: 30px;
+}
+
 .des_product {
   max-width: 656px;
   margin: auto;
@@ -151,33 +182,37 @@ li.nav-item .nav-link {
   margin-top: 50px;
 }
 
-.swiper-slide {
-  margin-right: 29px;
-}
-.swiper-slide .box_product .product_picture {
+.box_product .product_picture {
   margin: auto;
+  width: 394px;
+  height: 360px;
 }
-.swiper-slide .box_product .product_picture img {
+.box_product .product_picture img {
   width: 100%;
   text-align: center;
 }
-.swiper-slide .box_product .cate_product {
+.box_product .cate_product {
   margin-top: 26px;
 }
-.swiper-slide .box_product .name_product {
+.box_product .name_product {
   margin-top: 14px;
 }
-.swiper-slide .box_product .name_product .title_text {
+.box_product .name_product .title_text {
   font-size: 26px;
 }
-.swiper-slide .box_product .detail_product {
+.box_product .detail_product {
   margin-top: 6px;
 }
-.swiper-slide .box_product .product_cost {
+.box_product .product_cost {
   margin-top: 18px;
 }
-.swiper-slide .box_product .product_cost .title_text {
+.box_product .product_cost .title_text {
   font-size: 24px;
+}
+
+.box_product.slick-slide {
+  width: 394px !important;
+  margin-right: 29px;
 }
 
 /*===============End Products==============*/
@@ -185,42 +220,59 @@ li.nav-item .nav-link {
 .block_our_product {
   margin-top: 180px;
 }
+.block_our_product .block_our_product_title {
+  margin-bottom: 14px;
+}
 
-.title_our_product {
+.box_about_product {
   margin-top: 14px;
+  justify-content: space-between;
 }
 
-.des_our_product {
+.content_product .title_our_product {
+  max-width: 511px;
+}
+.content_product .des_our_product {
+  margin-top: 50px;
+  max-width: 580px;
+}
+.content_product .button_read {
   margin-top: 50px;
 }
-
-.button_read {
+.content_product .feature_img {
   margin-top: 50px;
+  max-width: 595px;
+  max-height: 260px;
 }
-
-.col-md-6:nth-child(1) .feature_img {
-  width: 595px;
-  height: 260px;
-  margin-top: 50px;
-}
-.col-md-6:nth-child(1) .feature_img img {
+.content_product .feature_img img {
   width: 100%;
 }
-.col-md-6:nth-child(2) .feature_img {
-  width: 595px;
-  height: 260px;
-  margin-top: 57px;
-}
-.col-md-6:nth-child(2) .feature_img img {
-  width: 100%;
+
+.box_archivement_mobile {
+  display: none;
 }
 
 .box_archivement {
   display: flex;
   justify-content: flex-end;
 }
-.box_archivement .small_box_archivement {
+.box_archivement .detail_archivement {
+  margin-top: 10px;
+}
+
+.small_box_archivement {
   margin-left: 50px;
+  float: right;
+}
+
+.archive_img {
+  max-width: 595px;
+  max-height: 510px;
+  margin-top: 57px;
+  overflow: hidden;
+}
+.archive_img img {
+  width: 100%;
 }
 
 /*===============End: Our Products==============*/
@@ -246,7 +298,7 @@ li.nav-item .nav-link {
   margin-top: 31px;
 }
 
-.detail_testi {
+.list_detail_testi {
   margin-top: 50px;
 }
 
@@ -273,8 +325,7 @@ li.nav-item .nav-link {
 .block_artickes {
   margin-top: 180px;
 }
-
-.title_artickes {
+.block_artickes .list_blog {
   margin-top: 14px;
 }
 
@@ -287,8 +338,8 @@ li.nav-item .nav-link {
   position: relative;
 }
 .box_feature_img .feature_photo {
-  width: 582px;
-  height: 565px;
+  max-width: 582px;
+  max-height: 565px;
   overflow: hidden;
 }
 .box_feature_img .feature_photo img {
@@ -311,6 +362,13 @@ li.nav-item .nav-link {
 }
 .box_feature_img .box_title_articles .detail_articles {
   margin-top: 6px;
+  padding: 0px 72px 0px 0px;
+}
+.box_feature_img .box_title_articles .detail_articles .description_text {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 .box_feature_img .box_title_articles .article_link {
   margin-top: 14px;
@@ -320,15 +378,165 @@ li.nav-item .nav-link {
   font-size: 18px;
   font-weight: 500;
 }
+.box_feature_img .box_button {
+  box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
+  position: absolute;
+  right: 23px;
+}
+.box_feature_img .box_button .btn_group:nth-child(1) {
+  background: #FFFFFF;
+}
+
+.box_blog {
+  display: flex;
+  align-items: center;
+}
+.box_blog .blog_picture {
+  width: 260px;
+  height: 260px;
+  margin-right: 50px;
+}
+.box_blog .blog_picture img {
+  max-width: 260px;
+  max-height: 260px;
+}
+
+.small_blog {
+  margin-bottom: 30px;
+}
+
+.detail_blog .name_blog {
+  margin-top: 21px;
+}
+.detail_blog .name_blog .title_text {
+  font-size: 24px;
+}
+.detail_blog .content_blog {
+  margin-top: 14px;
+}
+.detail_blog .content_blog .description_text {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.detail_blog .author_blog {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+}
+.detail_blog .author_blog .author_avatar {
+  width: 28px;
+  height: 28px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.detail_blog .author_blog .author_avatar img {
+  width: 100%;
+}
+.detail_blog .author_blog .title_text {
+  font-size: 14px;
+  margin-right: 24px;
+}
+.detail_blog .author_blog .description_text {
+  font-size: 14px;
+}
+
+.discount {
+  margin-top: 181px;
+  display: flex;
+  justify-content: space-between;
+}
 
 /*===============End: Articles=============*/
-p {
-  margin-bottom: 0 !important;
+.block_footer {
+  margin-top: 86px;
+}
+.block_footer .container {
+  border-top: 1.5px solid #ECE4DE;
+  padding: 80px 0px 88px;
+}
+
+.box_aboutus {
+  justify-content: space-between;
+}
+.box_aboutus .detail_aboutus .description_text {
+  color: #151411;
+  max-width: 505px;
+  margin-top: 36px;
+}
+
+.box_services {
+  display: flex;
+}
+.box_services .detial_service {
+  margin-left: 104px;
+}
+.box_services .title_services {
+  margin-bottom: 20px;
+}
+.box_services .title_services .title_text {
+  font-size: 20px;
+}
+.box_services .list_services .description_text {
+  color: #151411;
+  margin-bottom: 12px !important;
+  line-height: 180%;
 }
 
 /* custom bootstrap */
 @media (min-width: 1440px) {
   .container {
     max-width: 1320px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .title_text {
+    font-size: 40px;
+  }
+  .description_text {
+    font-size: 16px;
+  }
+  .btn_group {
+    padding: 15px 46px;
+    font-size: 16px;
+  }
+  .box_banner_text .banner_title_text {
+    font-size: 60px;
+  }
+  .box_archivement_mobile {
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-around;
+  }
+  .box_archivement {
+    display: none;
+  }
+  .box_about_product {
+    flex-direction: column;
+  }
+  .box_about_product .content_product .title_our_product {
+    max-width: unset;
+  }
+  .box_about_product .content_product .des_our_product {
+    margin-top: 50px;
+    max-width: unset;
+  }
+  .box_about_product .content_product .button_read {
+    margin-top: 50px;
+  }
+  .box_about_product .content_product .button_read .btn_group {
+    width: 100%;
+  }
+  .box_about_product .content_product .feature_img {
+    margin-top: 50px;
+    max-width: unset;
+    max-height: unset;
+  }
+  .product_numb .archive_img {
+    max-width: unset;
+  }
+  .list_blog {
+    flex-direction: column;
   }
 }
